# desafio-crawler

./: .gitignore  pyproject.toml
v1/: main.py
